--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "mly",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "socket.io": "^1.2.0"
